homepage style updated, route version corrected

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
                 <div class="code-wrap">
                     <div class="example-route">
                         Route:
-                        <code>https://bdapis.herokuapp.com/api/v1/divisions</code>
+                        <code>https://bdapis.herokuapp.com/api/v1.0/divisions</code>
                     </div>
                     <pre class="example-pre">
                         <code class="example-code">
@@ -194,7 +194,7 @@
                 <div class="code-wrap">
                     <div class="example-route">
                         Route:
-                        <code>https://bdapis.herokuapp.com/api/v1/division/rangpur</code>
+                        <code>https://bdapis.herokuapp.com/api/v1.0/division/rangpur</code>
                     </div>
                     <pre class="example-pre">
                         <code class="example-code">
