github link added, readme updated

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 <body>
 
     <div class="wrapper">
+
+        <div class="github-wrapper">
+            <div class="github"><a href="https://github.com/AbmSourav/bdapis">GitHub</a></div>
+        </div>
+
         <header class="header">
             <div class="logo">
                 <a href="https://bdapis.herokuapp.com/">
