codepen example added

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
             </div>
 
             <div class="example">
-                <h2 class="example-heading">Examples</h2>
+                <h2 class="example-heading" id="examples">Examples <a href="#examples">#</a></h2>
 
                 <div class="code-wrap">
                     <div class="example-route">
@@ -320,7 +320,16 @@
                             }
                         </code>
                     </pre>
-                </div>
+				</div>
+				
+				<div class="code-pen">
+					<h4 id="js-implementation">Implementation with JavaScript <a href="#js-implementation">#</a></h4>
+					<p class="codepen" data-height="391" data-theme-id="light" data-default-tab="js,result" data-user="abmsourav" data-slug-hash="WNxVrme" data-preview="true" style="height: 391px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="BD API Example">
+						<span>See the Pen <a href="https://codepen.io/abmsourav/pen/WNxVrme">
+						BD API Example</a> by Keramot UL Islam (<a href="https://codepen.io/abmsourav">@abmsourav</a>)
+						on <a href="https://codepen.io">CodePen</a>.</span>
+					</p>
+				</div>
             </div>
         </div>
     </div>
@@ -329,7 +338,8 @@
         <p>Copyright &copy; 2020, <a href="https://abmsourav.com">Keramot UL Islam</a> </p>
     </footer>
 
-    <script src="https://myCDN.com/prism@v1.x/components/prism-core.min.js"></script>
-    <script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script>
+    <!-- <script src="https://myCDN.com/prism@v1.x/components/prism-core.min.js"></script>
+	<script src="https://myCDN.com/prism@v1.x/plugins/autoloader/prism-autoloader.min.js"></script> -->
+	<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 </body>
 </html>
