meta tags added for home page

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://myCDN.com/prism@v1.x/themes/prism.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <title>BD API</title>
+	<meta name="description" content="BD API is a RestAPI service. Developed by Abm Sourav. Divisions, Districts, Upazilla, Thana, Post Office, Post Code etc of Bangladesh are available in Bangla and English within endpoints.">
+    
+	<meta name="googlebot" content="index, follow"/>
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:description" content="BD API is a RestAPI service. Developed by Abm Sourav." />
+	<meta name="twitter:title" content="BD API" />
+	<meta name="twitter:creator" content="@abm_sourav">
+
+	<meta property="og:locale" content="en_US" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="BD API" />
+	<meta property="og:description" content="BD API is a RestAPI service. Developed by Abm Sourav. Divisions, Districts, Upazilla, Thana, Post Office, Post Code etc of Bangladesh are available in Bangla and English within endpoints." />
+	<meta property="og:url" content="https://bdapis.herokuapp.com/" />
+	<meta property="og:site_name" content="BD API" />
+	<link rel="canonical" href="https://bdapis.herokuapp.com/" />
+
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title>BD API | RestAPI Service</title>
 </head>
 <body>
 
